# firebatch

./: .gitignore  LICENSE  Readme.md  dev_notes.md  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: python-publish.yml
firebatch/: cli.py  endcoding.py  firestore_client.py  operations.py  utils.py
tests/: test_operations.py
